minor fixes in main.go route.og
